# devclean

./: .gitignore  CMakeLists.txt  README.md  devclean-0.1.0-Linux.deb
.github/workflows/: release.yml
_CPack_Packages/Linux/DEB/devclean-0.1.0-Linux/: control  md5sums
_CPack_Packages/Linux/RPM/: rpmbuilddevclean.err  rpmbuilddevclean.out
_CPack_Packages/Linux/RPM/RPMS/: devclean-0.1.0-Linux.rpm
_CPack_Packages/Linux/RPM/SPECS/: devclean.spec
_CPack_Packages/Linux/TGZ/devclean-0.1.0-Linux/share/man/man1/: devclean.1
docs/: devclean.1
include/cleaner/: CleanEngine.hpp
include/commands/: AnalyzeCommand.hpp  CleanCommand.hpp  ICommand.hpp  ScanCommand.hpp  StatsCommand.hpp  VersionCommand.hpp
include/core/: Application.hpp  ArgumentParser.hpp  CommandDispatcher.hpp  Config.hpp  ScanHistory.hpp
include/platform/: Filesystem.hpp  ToolDetector.hpp
include/scanner/: CacheDefinition.hpp  CacheRegistry.hpp  PluginLoader.hpp  ScanResult.hpp  ScannerEngine.hpp
include/utils/: Formatter.hpp  TerminalUtils.hpp  ThreadPool.hpp
packaging/windows/choco/: devclean.nuspec
packaging/windows/winget/: devclean.yaml
scripts/: devclean-completion.bash
src/: benchmark.cpp  main.cpp
src/cleaner/: CleanEngine.cpp
src/commands/: AnalyzeCommand.cpp  CleanCommand.cpp  ScanCommand.cpp  StatsCommand.cpp  VersionCommand.cpp
src/core/: Application.cpp  ArgumentParser.cpp  CommandDispatcher.cpp  Config.cpp  ScanHistory.cpp
src/platform/: Filesystem.cpp  ToolDetector.cpp
src/scanner/: CacheRegistry.cpp  PluginLoader.cpp  ScannerEngine.cpp
src/utils/: Formatter.cpp  TerminalUtils.cpp  ThreadPool.cpp
tests/: cli_tests.cpp
